# opengl-learning

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: gui.h
include/glad/: glad.h
libs/: .gitignore  CMakeLists.txt
src/: glad.c  main.cpp  vertex_shader.glsl
